# CasperLabs-UniswapV2-Core

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md
common/tests-common/: Cargo.toml
common/tests-common/src/: deploys.rs  helpers.rs  lib.rs
erc20/: Makefile  (+3 more)
erc20-secure/erc20-secure/: Cargo.toml
erc20-secure/erc20-secure-crate/: Cargo.toml
erc20-secure/erc20-secure-crate/src/: data.rs  erc20.rs  event.rs  lib.rs
erc20-secure/ownable-crate/: Cargo.toml
erc20-secure/ownable-crate/src/: data.rs  lib.rs  ownable.rs
erc20/erc20/: Cargo.toml
erc20/erc20-proxy/: Cargo.toml
erc20/erc20-tests/: Cargo.toml
erc20/erc20-tests/src/: erc20_instance.rs  erc20_tests.rs  lib.rs
erc20/erc20-tests/wasm/: contract.wasm  erc20-token.wasm  wcspr-token.wasm
erc20/erc20/src/: data.rs  erc20.rs  event.rs  lib.rs
factory/factory/: Cargo.toml
factory/factory-tests/: Cargo.toml
factory/factory-tests/src/: factory_instance.rs  factory_tests.rs  lib.rs
factory/factory-tests/wasm/: erc20-token.wasm  factory.wasm  flash-swapper.wasm  pair-token.wasm  test-contract.wasm  test-token.wasm  wcspr-token.wasm
factory/factory/src/: data.rs  factory.rs  lib.rs
flash swapper/flash_swapper/: Cargo.toml
flash swapper/flash_swapper/src/: data.rs  flash_swapper.rs
flash-swapper/flash_swapper/: Cargo.toml
flash-swapper/flash_swapper/src/: flash_swapper.rs  lib.rs
flashswapper/flashswapper/: Cargo.toml
flashswapper/flashswapper/src/: data.rs  event.rs  flashswapper.rs  lib.rs
flashswapper/test-contract/: Cargo.toml
pair/pair/: Cargo.toml
pair/pair-tests/: Cargo.toml
pair/pair-tests/src/: lib.rs  pair_instance.rs  pair_tests.rs  test_instance.rs
pair/pair-tests/wasm/: erc20-token.wasm  factory.wasm  flash-swapper.wasm  pair-token.wasm  test-contract.wasm  test-token.wasm
pair/pair/src/: data.rs  errors.rs  event.rs  events.rs  lib.rs  pair.rs
pair/test-contract/: Cargo.toml  Makefile
pair/test-contract/src/: main.rs  mappings.rs  test.rs
pair/test-contract2/: Cargo.toml  Makefile
pair/test-contract2/src/: main.rs
router/uniswap_v2_router/: Cargo.toml
router/uniswap_v2_router/.history/src/: data_20211024172007.rs  data_20211024173128.rs  data_20211024182602.rs  data_20211024182608.rs  transfer_helper_20211024182625.rs  transfer_helper_20211024231532.rs  uniswap_v2_router_20211024172222.rs  uniswap_v2_router_20211024173133.rs  uniswap_v2_router_20211024174217.rs  uniswap_v2_router_20211024174222.rs  uniswap_v2_router_20211024174423.rs  uniswap_v2_router_20211024174514.rs  uniswap_v2_router_20211024174525.rs  uniswap_v2_router_20211024174532.rs  uniswap_v2_router_20211024174539.rs  uniswap_v2_router_20211024174559.rs  uniswap_v2_router_20211024174750.rs  uniswap_v2_router_20211024174824.rs  uniswap_v2_router_20211024174901.rs  uniswap_v2_router_20211024174904.rs  uniswap_v2_router_20211024174911.rs  uniswap_v2_router_20211024174935.rs  uniswap_v2_router_20211024175024.rs  uniswap_v2_router_20211024175042.rs  uniswap_v2_router_20211024175107.rs  uniswap_v2_router_20211024175129.rs  uniswap_v2_router_20211024175305.rs  uniswap_v2_router_20211024175411.rs  uniswap_v2_router_20211024175426.rs  uniswap_v2_router_20211024175442.rs  uniswap_v2_router_20211024175554.rs  uniswap_v2_router_20211024175851.rs  uniswap_v2_router_20211024175957.rs  uniswap_v2_router_20211024180234.rs  uniswap_v2_router_20211024180247.rs  uniswap_v2_router_20211024180321.rs  uniswap_v2_router_20211024180325.rs  uniswap_v2_router_20211024180346.rs  uniswap_v2_router_20211024180439.rs  uniswap_v2_router_20211024180441.rs  (+72 more)
router/uniswap_v2_router/src/: lib.rs  transfer_helper.rs  uniswap_v2_router.rs
router/uniswap_v2_router_tests/: Cargo.toml
router/uniswap_v2_router_tests/.history/src/: uniswap_instance_20211024164443.rs  uniswap_instance_20211024184840.rs  uniswap_instance_20211024184847.rs  uniswap_instance_20211024185045.rs  uniswap_instance_20211024185057.rs  uniswap_instance_20211024191338.rs  uniswap_instance_20211024191345.rs  uniswap_instance_20211024191348.rs  uniswap_instance_20211024191403.rs  uniswap_instance_20211024191417.rs  uniswap_instance_20211024191420.rs  uniswap_instance_20211024191422.rs  uniswap_instance_20211024191616.rs  uniswap_instance_20211024191703.rs  uniswap_instance_20211024191738.rs  uniswap_instance_20211024193706.rs  uniswap_instance_20211024193714.rs  uniswap_instance_20211024193955.rs  uniswap_instance_20211024194138.rs  uniswap_instance_20211024194152.rs  uniswap_instance_20211024223217.rs  uniswap_instance_20211024223219.rs  uniswap_instance_20211024223234.rs  uniswap_instance_20211024230835.rs  uniswap_tests_20211024174132.rs  uniswap_tests_20211024182811.rs  uniswap_tests_20211024182821.rs  uniswap_tests_20211024182906.rs  uniswap_tests_20211024182911.rs  (+264 more)
router/uniswap_v2_router_tests/src/: lib.rs  uniswap_instance.rs  uniswap_tests.rs
router/uniswap_v2_router_tests/wasm/: contract.wasm  library.wasm  pair.wasm  uniswap-v2-router.wasm  wcspr-token.wasm
wcspr/: .gitignore  Cargo.toml  Makefile  README.md
wcspr/invalid-purse-proxy/: Cargo.toml
wcspr/invalid-purse-proxy/src/: main.rs
wcspr/purse-proxy/: Cargo.toml
wcspr/purse-proxy/src/: main.rs
wcspr/session-code/: Cargo.toml
wcspr/test-contract/: Cargo.toml  Makefile
wcspr/test-contract/contract/: Cargo.toml
wcspr/test-contract/src/: constants.rs  main.rs  utils.rs
wcspr/test-contract2/: Cargo.toml  Makefile
wcspr/test-contract2/src/: constants.rs  main.rs
wcspr/utils/contract-utils/: Cargo.toml
wcspr/utils/test-env/: Cargo.toml
wcspr/wcspr/: Cargo.toml
wcspr/wcspr-crate/: Cargo.toml
wcspr/wcspr-crate/src/: lib.rs  wcspr.rs
wcspr/wcspr-tests/: Cargo.toml
wcspr/wcspr-tests/src/: constants.rs  lib.rs  wcspr_instance.rs  wcspr_tests.rs
wcspr/wcspr-tests/wasm/: contract.wasm  wcspr-token.wasm
wcspr/wcspr/src/: data.rs  errors.rs  lib.rs  wcspr.rs
wcspr/wcspr_test_contract/: .travis.yml  Cargo.toml  Makefile
wcspr/wcspr_test_contract/contract/: Cargo.toml
wcspr/wcspr_test_contract/tests/: Cargo.toml
(+113 files in other folders)
