[workspace]
members = [
    # COMMON
    "common/common",
    "common/tests-common",
    # ERC20
    "erc20-secure/erc20-secure-crate",
    "erc20-secure/erc20-secure",
    "erc20-secure/ownable-crate",
    "erc20-secure/erc20-secure-tests",
    "erc20/erc20",
    "erc20/erc20-tests",
    # FACTORY
    "factory/factory",
    "factory/factory-crate",
    "factory/factory-tests",
    # FLASH SWAPPER
    "flashswapper/flashswapper",
    "flashswapper/flashswapper-crate",
    "flashswapper/flashswapper-tests",
    # PAIR
    "pair/pair",
    "pair/pair-crate",
    "pair/pair-tests",
    # WCSPR
    "wcspr/wcspr",
    "wcspr/wcspr-crate",
    "wcspr/wcspr-tests",
    "wcspr/session-code",
]

[profile.release]
codegen-units = 1
lto = true
