[workspace]

members = [
  "wcspr",
  "test-contract",
  "test-contract2",
  "wcspr-tests",
  "purse-proxy",
  "invalid-purse-proxy"
]

[profile.release]
codegen-units = 1
lto = true

[patch.crates-io]
renvm-sig = { git = 'https://github.com/Scytalelabs-official/CasperLabs-renvm-sig.git', branch = 'main' }