[package]
name = "erc20-tests"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
casper-engine-test-support = "2.1.0"
base64 = "0.13.0"
casperlabs-test-env = "0.3.0"
casperlabs-contract-utils = "0.2.1"
casperlabs-erc20 = "2.0.1"

[features]
default = ["casper-contract/std", "casper-types/std", "casper-contract/test-support"]