[package]
name = "erc20"
version = "0.2.0"
authors = ["Muhammad Adrees <muhammad.adrees@scytalelabs.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
casperlabs-contract-utils = "0.2.1"
casperlabs-erc20 = "2.0.1"

[[bin]]
name = "erc20-token"
path = "bin/erc20_token.rs"
bench = false
doctest = false
test = false