[package]
name = "erc20"
version = "0.2.0"
authors = ["Muhammad Adrees <muhammad.adrees@scytalelabs.com>"]
edition = "2018"

[dependencies]
uniswap-erc20 = "0.1.0"
common = { path = "../../common/common" }

[[bin]]
name = "erc20-token"
path = "bin/erc20_token.rs"
bench = false
doctest = false
test = false