[package]
authors = ["Muhammad Adrees <muhammad.adrees@scytalelabs.com>"]
edition = "2018"
name = "factory-tests"
version = "0.2.1"

[dependencies]
blake2 = "0.9.1"
casper-contract = "1.3.2"
casper-engine-test-support = "1.3.2"
casper-types = "1.3.2"
contract-utils = {path = "../utils/contract-utils"}
hex = "0.4.3"
test-env = {path = "../utils/test-env"}

[features]
default = ["casper-contract/std", "casper-types/std", "casper-contract/test-support"]
