[package]
name = "factory"
version = "0.2.0"
authors = ["astro019 <dmitry.yakov7@gmail.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
contract-utils = { path = "../../utils/contract-utils" }

[[bin]]
name = "factory"
path = "bin/factory.rs"
bench = false
doctest = false
test = false
