[package]
name = "flashswapper"
version = "0.2.0"
authors = ["Muhammad Adrees <muhammad.adrees@scytalelabs.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
casperlabs-contract-utils = "0.2.1"
common = { path = "../../common/common" }

[[bin]]
name = "flashswapper-token"
path = "bin/flashswapper_token.rs"
bench = false
doctest = false
test = false


