[package]
name = "flashswapper"
version = "0.2.0"
authors = ["Muhammad Adrees <muhammad.adrees@scytalelabs.com>"]
edition = "2018"

[dependencies]
flashswapper-crate = { path = "../flashswapper-crate" }

[[bin]]
name = "flashswapper-token"
path = "bin/flashswapper_token.rs"
bench = false
doctest = false
test = false