[package]
name = "test"
version = "0.2.0"
authors = ["Muhammad Adrees <muhammad.adrees@scytalelabs.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
contract-utils = { path = "../../utils/contract-utils" }

[[bin]]
bench = false
doctest = false
name = "test-contract"
path = "bin/test_token.rs"
test = false

[features]
default = ["casper-contract/std", "casper-types/std"]

