[package]
name = "pair"
version = "0.2.0"
authors = ["Muhammad Adrees <muhammad.adrees@scytalelabs.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
casperlabs-contract-utils = "0.2.1"
cryptoxide = "0.3.3"
casperlabs-erc20 = "2.0.1"
common = { path = "../../common/common" }

[[bin]]
name = "pair-token"
path = "bin/pair_token.rs"
bench = false
doctest = false
test = false

[features]
default = ["casper-contract/std", "casper-types/std"]