[package]
name = "pair"
version = "0.2.0"
authors = ["Muhammad Adrees <muhammad.adrees@scytalelabs.com>"]
edition = "2018"

[dependencies]
casperlabs-erc20 = "2.0.1"
cryptoxide = "0.3.3"
common = { path = "../../common/common" }

[[bin]]
name = "pair-token"
path = "bin/pair_token.rs"
bench = false
doctest = false
test = false