
[package]
authors = ["Muhammad Adrees <muhammad.adrees@scytalelabs.com>"]
edition = "2018"
name = "test2"
version = "0.1.0"

[dependencies]
casper-contract = "1.3.2"
casper-types = "1.3.2"

[[bin]]
bench = false
doctest = false
name = "pair-test2"
path = "src/main.rs"
test = false

[features]
default = ["casper-contract/std", "casper-types/std"]

[profile.release]
codegen-units = 1
lto = true
