[package]
name = "test2"
version = "0.2.0"
authors = ["Muhammad Adrees <muhammad.adrees@scytalelabs.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
contract-utils = { path = "../../utils/contract-utils" }


[[bin]]
name = "pair-test2"
path = "bin/main.rs"
bench = false
doctest = false
test = false
