[package]
authors = ["Muhammad Adrees <muhammad.adrees@scytalelabs.com>"]
edition = "2018"
name = "wcspr"
version = "0.1.0"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
num-traits= "0.2.15"
contract-utils = {path = "../../utils/contract-utils"}
cryptoxide = "0.3.3"
hex = {version = "0.4.3", default-features = false}

[[bin]]
bench = false
doctest = false
name = "wcspr-token"
path = "bin/wcspr_token.rs"
test = false

[features]
default = ["casper-contract/std", "casper-types/std"]
