[package]
authors = ["Muhammad Adrees <muhammad.adrees@scytalelabs.com>"]
edition = "2018"
name = "wcspr"
version = "0.1.0"

[dependencies]
casperlabs-erc20 = "2.0.3"
common = { path = "../../common/common" }

[[bin]]
bench = false
doctest = false
name = "wcspr-token"
path = "bin/wcspr_token.rs"
test = false