[package]
name = "tests"
version = "0.1.0"
edition = "2018"

[dev-dependencies]
casper-contract = { version = "1.3.4", default-features = false, features = ["std", "test-support"] }
casper-engine-test-support = { version = "1.3.4", features = ["test-support"] }
casper-types = { version = "1.3.4", default-features = false, features = ["std"] }

[[bin]]
name = "integration-tests"
path = "src/integration_tests.rs"
bench = false
doctest = false

